                        GPSD project news

3.25.1~dev: WIP
  Handle NTRIPv2 that comes in "chunks".
  Add UBX-MON-COMMS, UB-MON-RXBUF, and UBX-MON-TXBUF decodes.
  Improve TSIP and UBX intitalization.
  Gather Antenna Status (ant_stat) and Jamming (jam) and send to JSON.
  Always build u-blox, RTCM104V2, RTCM104V3 drivers.
  
  Note: The new "chunk" code led to a short lived bug that led to
        CVE-2023-43628, a buffer overrun.  That bug never appeared in
        any gpsd release.

3.25: 2022-10-09
  Have ubxtool "-w 0" run forever.
  Bump libgps version to 30.0
  Change fixsource_t, store server locally, make pointers const.
  Move gpsd_hexpack() to gps.h as gps_hexpack()
  Move gpsd_hexdump() to gps.h as gps_hexdump()
  Allow gpsctl -s/--ship to work without -f.
  Grab prRes and quality from u-blox 8+, into JSON, then into xgps.
  New GPSD-MIB, installed in share/mibs/gpsd.
  gpssnmp supports GPSD-MIB in pass and pass_persist modes
  Add decodes for NMEA $xxHDM, $xxROT and $xxXDR
  Add Magnetic Heading (mheading) and Rate of Rotation (rot) to attitude_t
  Allow NTP time from gpsd://, tcp:// and udp:// sources
  Add the -B, --nobuffer, option to gpspipe.
  gpsd opens $RUNDIR/chrony.clk.XXX.sock to supply serial time to chronyd.
  Add -g and --garmin options to gpxlogger for depth.
  Add -F and --filein options to gpxlogger to read GPSD JSON from a file.

3.24: 2022-04-22
  NTRIP 2.0 now works.  But still only plain HTML, not RTP, etc.
  Remove ntrip option and NTRIP_ENABLE.  Always build.
  Remove passthrough option and PASSTHROUGH_ENABLE.  Always build.
  Remove nmea0183 option and NMEA0183_ENABLE.  Always build.
  Remove netfeed option and NETFEED_ENABLE.  Always build.
  gpsd will retry ntrip:// and tcp:// connections
  cgps can expand to show more sats. Added --rtk option.
  maidenhead() checks for input errors.
  Better SHM logs.
  PPS and TOFF JSON now include shm used, and real precision.
  Add initial, untested, TSIPv1 support